FLUID-4884: Made popup panel resizable, and fixed model change highlighting on Firefox

--- a/src/client/css/ComponentGraph.css
+++ b/src/client/css/ComponentGraph.css
@@ -1,3 +1,9 @@
+/** TODO: this definition needs to go into FluidDebugging.css together with the resizable trigger **/
+
+.fl-debug-holder-open {
+    border-top-style: ridge;
+}
+
 .fld-author-pane {
     width: 100%;
     height: 100%;
